[package]
name = "binance-api"
version = "0.1.0"
authors = ["Jarred Nicholls <jarred.nicholls@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = { version = "0.13", features = ["tokio-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
easy-ext = "0.2"
futures = "0.3"
hex = "0.4"
hmac = "0.11"
num-derive = "0.3"
num-traits = "0.2"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
serde_urlencoded = "0.7"
sha2 = "0.9"
thiserror = "1"
tracing = "0.1"
tokio = { version = "1" }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
